email verif feature: design db, send email, implement email verif API
