# doc/swagger/simple_bank.swagger.json
@@ -23,7 +23,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
-        "summary": "CreateUser creates a new user account.",
+        "summary": "Create new user",
+        "description": "Use this API to create a new user",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
@@ -56,7 +57,8 @@
     },
     "/v1/login_user": {
       "post": {
-        "summary": "LoginUser authenticates user credentials and returns access tokens.",
+        "summary": "Login user",
+        "description": "Use this API to login user",
         "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
@@ -89,7 +91,8 @@
     },
     "/v1/update_user": {
       "patch": {
-        "summary": "UpdateUser updated user account",
+        "summary": "Update user",
+        "description": "Use this API to update user",
         "operationId": "SimpleBank_UpdateUser",
         "responses": {
           "200": {
@@ -113,6 +116,45 @@
             "schema": {
               "$ref": "#/definitions/pbUpdateUserRequest"
             }
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      }
+    },
+    "/v1/verify_email": {
+      "get": {
+        "summary": "Verify email",
+        "description": "Use this API to verify user's email address",
+        "operationId": "SimpleBank_VerifyEmail",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbVerifyEmailResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "emailId",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "secretCode",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "tags": [
@@ -227,6 +269,14 @@
         "createdAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "pbVerifyEmailResponse": {
+      "type": "object",
+      "properties": {
+        "isVerified": {
+          "type": "boolean"
         }
       }
     },
